--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
 .App {
   text-align: center;
+  font-family: 'myFont Meo';
+  /*background: #4f5152;*/
+  background-image: url('./assert/images/bg.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  padding: 20px 0;
 }
-
+@font-face {
+  font-family: 'myFont Meo';
+  src: url('./assert/Laila/Laila-Medium.ttf'); /* IE9 Compat Modes */
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -31,3 +42,4 @@
     transform: rotate(360deg);
   }
 }
+
