--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   color: white;
   padding: 20px 0;
+  height: 100vh;
 }
 @font-face {
   font-family: 'myFont Meo';
